More space compression throughout, adding font-utility-large style and implementing where needed, removing 1.1em mobile adjustment on body tag (to save space) and some adjustments needed to fix alignments

--- a/waters-aem-frontend/src/styles/features.scss
+++ b/waters-aem-frontend/src/styles/features.scss
@@ -114,8 +114,7 @@
         }
 
         &-title {
-            @include font-h3;
-            color: $color-font-medium;
+            @include font-utility-large;
             margin-bottom: $space-s;
         }
 
@@ -141,7 +140,7 @@
 .cmp-features--signin {
 
     .cmp-features {
-        margin-bottom: $space-s;
+        margin-bottom: $space-m;
         padding: 0;
 
         &__list {
